Allow skipping the build of "ast-dump".
"ast-dump" requires the Boost regex library. Adding a "--disable-programs"
to the kernel allows not to require any Boost library at build time, only
Boost headers are necessary. This eases the test of new compilers and
targets using Boost headers only.

The default has been set to "yes". This may not be a good idea because
it will also change the "sdk-remote" and the "libjpeg" default, but
let's try.

	* configure.ac (--enable-programs, BUILD_PROGRAMS): New.
	* src/Makefile.am: Honor "BUILD_PROGRAMS".

--- a/configure.ac
+++ b/configure.ac
@@ -98,7 +98,22 @@ BOOST_REQUIRE([1.35])
 URBI_PTHREAD
 URBI_SOCKETS
 
-BOOST_REGEX
+URBI_ARG_ENABLE([enable-programs],
+                [Build extra programs], [yes|no], [yes])
+case $enable_programs in
+ (no)  # No need to pass --disable-programs, because (i) it's the
+       # default for sdk-remote, and (ii) if --disable-programs is
+       # passed to this configure, it gives it to its subconfigures,
+       # so we would just duplicate the request.
+       ;;
+  (*)   ac_configure_args="$ac_configure_args --enable-programs";;
+esac
+
+AM_CONDITIONAL([BUILD_PROGRAMS],
+               [test x$enable_programs = xyes])
+if test x$enable_programs = xyes; then
+  BOOST_REGEX
+fi
 BOOST_TOKENIZER
 
 
