Make the dependency to ltdl explicit.
	* externals/libport: Update.
	* src/Makefile.am (LTDL_LIBS): New.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -1,5 +1,6 @@
 include $(top_srcdir)/build-aux/init.mk
 include $(top_srcdir)/build-aux/fix-libtool-la.mk
+LTDL_LIBS = $(top_builddir)/libltdl/libltdlc.la
 SUBDIRS = . tests
 if BINDINGS
  SUBDIRS += swig
