Pass subdir-options.
I am tempted to enable this by default, I fail to see cases where we don't
want it.  But maybe it makes the Makefiles longer, I need to check first.

	* Makefile.am (AUTOMAKE_OPTIONS): Pass subdir-options.
	This is probably what caused the libltdl/.deps problems.

--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -1,6 +1,7 @@
 include $(top_srcdir)/build-aux/build-aux.mk
-
+AUTOMAKE_OPTIONS += subdir-objects
 ACLOCAL_AMFLAGS = -I build-aux -I sdk
+
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status $@
 include libltdl/Makefile.inc
