Handle assignments as pattern matchings.
	* share/urbi/exception.u (MatchFailure): Add new exception for maching
	failure.
	* share/urbi/urbi.u: Reorder to adapt to new dependencies. Adapt to the
	new try/catch syntax.
	* src/parser/ugrammar.y: Accept 'var lvalue' as an expression.
	* src/ast/ast.yml: Accept 'var lvalue' as an expression.
	(Binding): Make it an lvalue. Make its child an lvalue.
	(PropertyAction, PropertyWrite, PropertyRead): Remove, factor in
	Property.
	(Property): New, property access. Used to read and write properties.
	(Catch): Use a pattern.
	(Assign): New. Generic pattern-matching assignment node.
	(Subscript): New. Subscript (square bracket) operator.
	(Match): New. Pattern, with a potential guard.
	* src/binder/binder.cc,
	* src/binder/binder.hh: Handle Match nodes. Scope variables declared
	in 'if' and 'while'.
	* src/flower/flower.cc: Rewrite desugared code.
	* src/parser/ast-factory.cc: Adapt try desugaring.
	* src/rewrite/desugarer.cc,
	* src/rewrite/desugarer.hh: Desugar Assign nodes.
	* src/rewrite/pattern-binder.cc,
	* src/rewrite/pattern-binder.hh: Return bindings separately.
	* src/runner/interpreter-visit.hxx: Handle try/catch with pattern
	matching.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -3,6 +3,9 @@ all.stamp
 and.cc
 and.hh
 and.hxx
+assign.cc
+assign.hh
+assign.hxx
 assignment.cc
 assignment.hh
 assignment.hxx
@@ -116,6 +119,9 @@ lvalue-args.hxx
 lvalue.cc
 lvalue.hh
 lvalue.hxx
+match.cc
+match.hh
+match.hxx
 message.cc
 message.hh
 message.hxx
@@ -151,15 +157,9 @@ pipe.hxx
 pretty-printer.cc
 pretty-printer.hh
 pretty-printer.stamp
-property-action.cc
-property-action.hh
-property-action.hxx
-property-read.cc
-property-read.hh
-property-read.hxx
-property-write.cc
-property-write.hh
-property-write.hxx
+property.cc
+property.hh
+property.hxx
 return.cc
 return.hh
 return.hxx
@@ -175,6 +175,9 @@ stmt.hxx
 string.cc
 string.hh
 string.hxx
+subscript.cc
+subscript.hh
+subscript.hxx
 tag.cc
 tag.hh
 tag.hxx
