Add desugaring facility %unscope.
This enables to declare variables in parent scopes, and is extremly useful in
desugared code. But caution, don't try this at home!

	* src/ast/ast.yml (Unscope): New node for the %unscope construct.
	* src/parser/utoken.l: Scan it.
	* src/parser/ugrammar.y: Parse it.
	* src/binder/binder.cc,
	* src/binder/binder.hh: Honor %unscope.
	* src/runner/interpreter-visit.hxx: Refuse it in the interpreter.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1361,6 +1361,17 @@ Match:
         access: rW
         init: '0'
 
+Unscope:
+  super: Exp
+  attributes:
+    - count:
+        type: unsigned
+        access: r
+        desc: number of scope level to bypass
+  printer:
+    - '"%unscope:"'
+    - $count
+
 # Local Variables:
 # mode: yaml
 # End:
