--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -52,13 +52,12 @@ BUILDCHECK_PATH = $(abs_builddir)/bin:$(abs_top_builddir)/../tests/bin:$(abs_top
 
 # Adjust LD_LIBRARY_PATH on Windows.  Make a single wine directory for
 # all the tests.
-WINEPREFIX_ENVIRONMENT :=					\
-  $(shell							\
-     $(wine_ld_library_path)					\
-     --force							\
-     --to=$(abs_builddir)					\
-     --wrapper=$(abs_top_builddir)/sdk-remote/src/urbi-launch	\
-     --wrapper=$(abs_top_builddir)/src/urbi-console)
+WINEPREFIX_ENVIRONMENT :=				\
+  $(shell						\
+     $(wine_ld_library_path)				\
+     --force						\
+     --to=$(abs_builddir)				\
+     --wrapper=$(abs_top_builddir)/src/urbi-launch)
 
 # Use the wrappers to run the non-installed executables.
 BUILDCHECK_ENVIRONMENT +=			\
