Fix (try to...) umake on Windows.
	* sdk/umake-common (report): Rename as...
	(stderr): this, for consistency.
	Adjust callers.

	* sdk/param.mk.in, sdk/umake.in: Support LIBADD to please Windows.

	* src/tests/Makefile.am (WINEPREFIX_ENVIRONMENT): Try to find the
	kernel's libuobject.
	* src/tests/bin/wrapper.in: Be more verbose.

--- a/sdk-remote/sdk/param.mk.in
+++ b/sdk-remote/sdk/param.mk.in
@@ -106,7 +106,7 @@ libbase = $(OUTSHLIB:$(SHLIBEXT)=)
 $(OUTSHLIB): $(LTOBJECTS) $(ARGUMENT_LIBS)
 	$(CXXLINK) -export-dynamic -o $(lalib) \
 	  $(LTOBJECTS) $(ARGUMENT_LIBS) $(LIBS)  \
-	  -rpath $(hostdir)
+	  -rpath $(hostdir) $(LIBADD)
 	cp $$(ls .libs/$(libbase)*$(SHLIBEXT) | head -n 1) $(OUTSHLIB)
 #	rm -f $(lalib)
 
