--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -112,7 +112,7 @@ CLEANFILES += libuobject.la.stamp
 if BUILD_PROGRAMS
 if !WIN32
 # ast-dump.
-noinst_PROGRAMS = ast-dump
+noinst_PROGRAMS = ast-dump testcoro
 dist_ast_dump_SOURCES =				\
   ast-dump.cc					\
   ast/dot-printer.hh				\
@@ -121,6 +121,12 @@ dist_ast_dump_SOURCES =				\
   $(dist_libuobject_la_SOURCES)
 ast_dump_CPPFLAGS = $(libuobject_la_CPPFLAGS)
 ast_dump_LDADD   = $(libuobject_la_LIBADD)
+dist_testcoro_SOURCES =				\
+  scheduler/testcoro.cc				\
+  $(nodist_libuobject_la_SOURCES)		\
+  $(dist_libuobject_la_SOURCES)
+testcoro_CPPFLAGS = $(libuobject_la_CPPFLAGS)
+testcoro_LDADD = $(libuobject_la_LIBADD)
 endif !WIN32
 endif BUILD_PROGRAMS
 
