Mark non-mandatory fields as non-mandatory.
This allows the use of YYDEBUG without crashing.

	* src/ast/ast.yml: Mark non-mandatory fields as non-mandatory.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1346,10 +1346,12 @@ Match:
     - guard:
         type: rExp
         access: rW
+        mandatory: false
     - bindings:
         type: rExp
         access: rW
         init: '0'
+        mandatory: false
 
 Unscope:
   super: Exp
