--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -35,6 +35,8 @@ libs:
 # check-html, check-clean, check-uob etc.
 check-%:
 	$(MAKE) $(AM_MAKEFLAGS) -C src/tests $@
+recheck recheck-html:
+	$(MAKE) $(AM_MAKEFLAGS) -C src/tests $@
 
 # The target run by the buildfarm.
 CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
