check-sdk-uobjects-buildfarm.
	* Makefile.am (check-sdk-uobjects-buildfarm): New.

--- a/Makefile.am
+++ b/Makefile.am
@@ -53,16 +53,22 @@ libs:
 ## Check.  ##
 ## ------- ##
 
+
+# The target run by the buildfarm.
+.PHONY: check-buildfarm check-sdk-uobjects-buildfarm
+CHECK_BUILDFARM_FLAGS = AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
+check-buildfarm:
+	$(MAKE) $(AM_MAKEFLAGS) -C tests check-html $(CHECK_BUILDFARM_FLAGS)
+
+# The target used by the build farm to create the uobjects used in our
+# uob test suite.
+check-sdk-uobjects-buildfarm:
+	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src/tests check-uobjects $(CHECK_BUILDFARM_FLAGS)
+
 # check-html, check-clean, check-uob etc.
+# Last in order to avoid hiding the previous rules.
 check-%:
 	$(MAKE) $(AM_MAKEFLAGS) -C tests $@
 recheck recheck-html:
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src/tests $@
 	$(MAKE) $(AM_MAKEFLAGS) -C tests $@
-
-
-
-# The target run by the buildfarm.
-CHECK_BUILDFARM_FLAGS = AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
-check-buildfarm:
-	$(MAKE) $(AM_MAKEFLAGS) -C tests check-html $(CHECK_BUILDFARM_FLAGS)
