Add SDK API files.
	* src/urbi/sdk.cc,
	* src/urbi/sdk.hh,
	* src/urbi/sdk.hxx: New. Simply aggregate the uobject API in a single
	file/namespace.
	* src/urbi/local.mk,
	* src/Makefile.am: Build sdk/.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -82,6 +82,7 @@ include rewrite/local.mk
 include runner/local.mk
 include kernel/local.mk
 include lib/sched/local.mk
+include urbi/local.mk
 
 urbiinclude_HEADERS = $(uobject_headers)
 
