check-buildfarm for the BF.
	* src/tests/Makefile.am (check-buildfarm): New.
	* Makefile.am: Adjust.

--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -86,3 +86,13 @@ check-clean-local:
 debug:
 	echo $(UOBJECTS)
 	echo $(TEST_LOGS)
+
+## ----------- ##
+## Buildfarm.  ##
+## ----------- ##
+
+# The target run by the buildfarm.
+CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
+check-buildfarm:
+	$(MAKE) $(AM_MAKEFLAGS) $(CHECK_BUILDFARM_FLAGS) check-html
+
