--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -39,10 +39,8 @@ recheck recheck-html:
 	$(MAKE) $(AM_MAKEFLAGS) -C src/tests $@
 
 # The target run by the buildfarm.
-CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
 check-buildfarm:
-	$(MAKE) $(AM_MAKEFLAGS) -C src/tests \
-	  $(CHECK_BUILDFARM_FLAGS) check-html
+	$(MAKE) $(AM_MAKEFLAGS) -C src/tests $@
 
 ## ----- ##
 ## Doc.  ##
