--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -3,7 +3,6 @@ AUTOMAKE_OPTIONS += subdir-objects
 TESTS =
 include $(top_srcdir)/build-aux/check.mk
 include $(top_srcdir)/build-aux/m4sh.mk
-include $(top_srcdir)/build-aux/wine-ld-library-path.mk
 
 include examples/local.mk
 include liburbi/local.mk
@@ -50,22 +49,9 @@ CHECK_ENVIRONMENT +=				\
 # examples programs.
 BUILDCHECK_PATH = $(abs_builddir)/bin:$(abs_top_builddir)/../tests/bin:$(abs_top_builddir)/src/examples
 
-# Adjust LD_LIBRARY_PATH on Windows.  Make a single wine directory for
-# all the tests.  We look for the dependencies of urbi-console to find
-# libuobjects etc.
-WINEPREFIX_ENVIRONMENT :=				\
-  $(shell						\
-     $(wine_ld_library_path)				\
-     --force						\
-     --to=$(abs_builddir)				\
-     $(abs_top_builddir)/src/libuobject/.libs		\
-     --wrapper=$(abs_top_builddir)/src/urbi-launch	\
-     --wrapper=$(abs_top_builddir)/../src/urbi-console)
-
 # Use the wrappers to run the non-installed executables.
 BUILDCHECK_ENVIRONMENT +=			\
-  PATH=$(BUILDCHECK_PATH):$$PATH		\
-  $(WINEPREFIX_ENVIRONMENT)
+  PATH=$(BUILDCHECK_PATH):$$PATH
 
 INSTALLCHECK_ENVIRONMENT +=			\
   PATH=$(bindir):$$PATH
