Improve Windows tests.
The urbi-launch should have the same name as the true executable,
including EXEEXT.

	* configure.ac: Add EXEEXT to the wrapper.
	* src/tests/Makefile.am: Adjust.
	* src/tests/bin/uobject-check.as: Idem.
	* src/tests/bin/urbi-launch.in: Ditto.
	* src/tests/examples/urbi-send.as: Likewise.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -177,7 +177,7 @@ URBI_CONFIG_WRAPPER([umake-shared])
 URBI_CONFIG_WRAPPER([umake-clean])
 URBI_CONFIG_WRAPPER([umake-link])
 URBI_CONFIG_WRAPPER([umake-lib])
-AC_CONFIG_FILES([src/tests/bin/urbi-launch],
-                [chmod +x src/tests/bin/urbi-launch])
+AC_CONFIG_FILES([src/tests/bin/urbi-launch$EXEEXT:src/tests/bin/urbi-launch.in],
+                [chmod +x src/tests/bin/urbi-launch$EXEEXT])
 
 AC_OUTPUT
