--- a/sdk-remote/src/tests/bin/urbi-launch.in
+++ b/sdk-remote/src/tests/bin/urbi-launch.in
@@ -7,9 +7,10 @@ case $VERBOSE in
   (x) set -x;;
 esac
 
-abs_top_srcdir='@abs_top_srcdir@'
-abs_top_builddir='@abs_top_builddir@'
-program=$abs_top_builddir/src/urbi-launch
+: ${EXEEXT='@EXEEXT@'}
+: ${abs_top_srcdir='@abs_top_srcdir@'}
+: ${abs_top_builddir='@abs_top_builddir@'}
+: ${program=$abs_top_builddir/src/urbi-launch$EXEEXT}
 
 # The libubbject we load depends on the usage.
 echo >&2 "$0: $*"
