Restore modifier syntax, as requested by JCB.
Tricky. Seens the parser cant handle exp: lvalue = exp dictionary,
handle modifiers at the exp: exp dictionary level, and reinject the
dictionary when an assignment is encountered.

Support trajectory generators on the []= operator

	* src/ast/.gitignore: Adapt.
	* src/ast/ast.yml: Add Dictionary node. Add method and
	extra_args fields to ast::Write.
	* src/binder/binder.cc (visit(Asignment)): Copy new fields when
	cloning. Handle the (extra_args && method) case.
	(visit(Dictionary)): Report an error if a dictionary with a base
	('0 a:1') is encountered.
	* src/binder/binder.hh: Declare that we visit Dictionary.
	* src/parser/ugrammar.y: Parse exp: ( dictionary ) and exp: exp
	modifier. Accumulate modifiers in an ast::Dictionary. Inject it
	back when an Assignment is encountered.
	* src/rewrite/desugarer.cc (handle): New. Factor modifiers_type
	copying.
	visit(Assign): Handle modifiers for assign and subscript assign,
	which is now unsugared as an Assignment node with method='[]='.
	* src/rewrite/desugarer.hh: Declare handle.
	* src/runner/interpreter-visit.hxx: Assert that no dictionary
	with a base is encountered at run-time.
	* tests: Update modifiers syntax.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -57,6 +57,9 @@ decrementation.hxx
 default-visitor.hh
 default-visitor.hxx
 default-visitor.stamp
+dictionary.cc
+dictionary.hh
+dictionary.hxx
 do.cc
 do.hh
 do.hxx
