Fix issues with paths as arguments to umake.
	* sdk/param.mk.in: Beware that -o foo/bar.so creates
	foo/.libs/bar.so, not .libs/foo/bar.so..
	* sdk/umake.in: Don't use s/$file// when $file can contain /.

--- a/sdk-remote/sdk/param.mk.in
+++ b/sdk-remote/sdk/param.mk.in
@@ -104,11 +104,11 @@ $(OUTLIB): $(LTOBJECTS) $(ARGUMENT_LIBS)
 lalib = $(OUTSHLIB:$(SHLIBEXT)=.la)
 libbase = $(OUTSHLIB:$(SHLIBEXT)=)
 $(OUTSHLIB): $(LTOBJECTS) $(ARGUMENT_LIBS)
-	$(CXXLINK) -export-dynamic -o $(lalib) \
-	  $(LTOBJECTS) $(ARGUMENT_LIBS) $(LIBS)  \
-	  -rpath $(hostdir) $(LIBADD)
-	cp $$(ls .libs/$(libbase)*$(SHLIBEXT) | head -n 1) $(OUTSHLIB)
-#	rm -f $(lalib)
+	$(CXXLINK) -export-dynamic -o $(lalib)	\
+	  $(LTOBJECTS) $(ARGUMENT_LIBS) $(LIBS)	-rpath $(hostdir) $(LIBADD)
+	cp $$(ls $(dir $(libbase))/.libs/$(notdir $(libbase))*$(SHLIBEXT) \
+	  | head -n 1) $(OUTSHLIB)
+
 
 # The command to generate the library.
 #
