--- a/doc/specs/URBI.INI
+++ b/doc/specs/URBI.INI
@@ -1,3 +1,4 @@
+//                                      -*- urbi -*-
 var obj = Object.new;
 do (obj)
 {
@@ -21,3 +22,19 @@ var action_one = 1;
 var value_two = 2;
 var action_two = 2;
 var default_action = 3;
+
+// We want random to become deterministic.
+do (Float)
+{
+  var this.random_counter = 0;
+  var this.random_values = [3, 1, 2];
+  random = 
+    function ()
+    { 
+      var res = random_values[random_counter];
+      // We don't want COW here, as the doc calls "5.random" repeatedly.
+      Float.random_counter = (random_counter + 1) % random_values.size;
+      res
+    }
+};
+
