--- a/sdk-remote/externals/bootstrap.cfg
+++ b/sdk-remote/externals/bootstrap.cfg
@@ -1,8 +1,16 @@
+# Libport.
 external: externals/libport -> libport
-link: build-aux          -> externals/libport/build-aux
+link: build-aux -> externals/libport/build-aux
+
 link: include/libport    -> externals/libport/include/libport
 link: lib/libport        -> externals/libport/lib/libport
-link: libltdl            -> externals/libport/libltdl
-link: jpeg-6b            -> externals/libjpeg-6b
+
+# link: include/sched -> externals/libport/include/sched
+# link: lib/sched     -> externals/libport/lib/sched
+
+link: libltdl  -> externals/libport/libltdl
+
+# Libjpeg.
 external: externals/libjpeg-6b -> jpeg-6b
+link: jpeg-6b -> externals/libjpeg-6b
 subpackage: externals/libjpeg-6b
