--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -1,4 +1,5 @@
-include $(top_srcdir)/build-aux/build-aux.mk
+include build-aux/init.mk
+include build-aux/build-aux.mk
 AUTOMAKE_OPTIONS += subdir-objects
 ACLOCAL_AMFLAGS = -I build-aux -I sdk
 
